<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">danborgir</string>


        <string name="anadolu">Anadolu Hamburger</string>
        <string name="ikikofte">Two Hamburger Patties</string>
        <string name="cheddar">Cheddar</string>
        <string name="domates">Tomato</string>
        <string name="teslimatSure">Delivery:20 Min</string>
        <string name="hamburgerAciklama">Anadoludan Burger!</string>
        <string name="fiyatYazi">$6</string>
        <string name="buttonYazi">ADD TO CART</string>
         <string name="marul">Lettuce</string>
        <string name="tursu">Pickles</string>
        <string name="danbörgır">DAN BÖRGIR</string>
</resources>